--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-form",
   "version": "0.1.0",
   "private": true,
+  "homepage": "build/static.html",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
